--- a/docs/views/fe/interview/手写系列.md
+++ b/docs/views/fe/interview/手写系列.md
@@ -87,87 +87,114 @@ function myBind(ctx, ...args1) {
 }
 ```
 
-## 实现发布订阅、观察者模式
 
-[观察者模式与订阅发布模式的区别](https://www.cnblogs.com/onepixel/p/10806891.html)
 
-`一句话总结： 发布-订阅模式是面向调度中心编程的，而观察者模式则是面向目标和观察者编程的。前者用于解耦发布者和订阅者，后者用于耦合目标和观察者`
 
-## 发布订阅
 
-```
-class PubSub {
-	constructor() {
-		this.subers = [];
-	}
 
-	sub(topic, callback) {
-		let callbacks = this.subers[topic];
-		if (!callbacks) {
-			this.subers[topic] = [callback];
-		} else {
-			callbacks.push(callback);
-		}
-	}
 
-	pub(topic, ...args) {
-		let callbacks = this.subers[topic];
-		callbacks.forEach(callback => callback(...args))
-	}
+## 实现 深克隆
+```js
+function deepClone( obj ){
+  if(obj === null) return null;
+  if( typeof obj !== 'object' )return obj;
+  if(obj instanceof RegExp) return new RegExp(obj);
+  if(obj instanceof Date) return new Date(obj)
+
+  var newObj = new obj.constructor();
+  for(keys in obj){
+    if( obj.hasOwnProperty(keys)){
+      newObj[keys] = deepClone(obj[keys]);
+    }
+  }
+  return newObj;
 }
 
-const aEvent = (msg) => {
-	console.log(msg + 'aaa');
+var aa = {
+    a:1,
+    b:"234",
+    c:{
+        e:[1,2,3,4],
+        f:{
+            g:34,
+            h:"45",
+            i:{
+                j:[7,4,5,6,'323']
+            }
+        }
+    },
+    k:new Date(),
+    m:/\W(1-9)/g,
+    l:undefined,
+    n:null
 }
-
-const bEvent = (msg) => {
-	console.log(msg + 'bbb');
-}
-
-let pubsub = new PubSub();
-
-pubsub.sub('a', aEvent)
-pubsub.sub('b', bEvent)
-
-pubsub.pub('a', 'A订阅者')
-pubsub.pub('b', 'B订阅者')
-```
-### 观察者模式
-
-```
-class Sub {
-	constructor() {
-		this.obers = []
-	}
-
-	add(ob) {
-		this.obers.push(ob)
-	}
-
-	notify(...args) {
-		this.obers.forEach(ob => ob.update(...args))
-	}
-}
-
-class Ob {
-	update(...args) {
-		console.log(...args)
-	}
-}
-
-let ob1 = new Ob();
-let ob2 = new Ob();
-
-let sub = new Sub();
-
-sub.add(ob1)
-sub.add(ob2)
-
-
-sub.notify('目标发生了变化')
+var bb = deepClone(aa);
+console.log(aa === bb)  //false
 ```
 
-## debounce
+## 实现 new
+```js
+function _new (fn,args){
+  var obj = Object.create(fn.prototype);
+  var result = fn.apply(obj,args);
+  return result instanceof Object ? result : obj;
+}
+
+```
+
+## 实现 instanceof 
+```js
+function myInstanceof(L,R){
+  var _R_ = R.prototype;
+  var _L_ = L.__proto__;
+  while(true){
+    if( !_L_ ) return false;
+    if( _L_ == _R_ ) return true;
+    _L_ = _L_.__proto__;
+  }
+}
+
+console.log(myInstanceof([], Array))   //true
+```
+
+## 实现 add(1)(2)(3) 柯里化;
+```js
+var curry = (fn,...args) => args.length >= fn.length ? fn(...args) : (..._args) => curry(fn,...args,..._args)
+var sub = function(x,y,z){
+  return x+y+z;
+}
+var add = curry(sub);
+add(1)(2)(3)  //6
+```
+
+## 实现 add(1,2,3,4)(5)(6,7).sub() 柯里化函数;
+```js
+function add(...args){
+  var params = [...args];
+  function curry (){
+    params = [...params,...arguments];
+    return curry;
+  }
+  curry.sub = function(){
+    return params.reduce((p,n)=>p+n,0)
+  }
+  return curry;
+}
+
+add(1,2,3,4,5)(6)(7,8).sub()  //36
+```
+
+## 实现 Object.create
+```js
+function myCreate(obj){
+  function C(){}
+  C.prototype = obj;
+  return new C();
+}
+```
+## 实现 防抖、节流
+
+### 防抖
 一段时间内只执行最后一次
 ```
 function debounce(fn, delay=500) {
@@ -190,7 +217,7 @@ input1.addEventListener('keyup', debounce(() => {
     console.log(input1.value);
 }), 600)
 ```
-## throttle
+### 节流（throttle）
 一段时间内只执行第一次
 ```
 function throttle(fn, delay = 100) {
@@ -211,4 +238,70 @@ function throttle(fn, delay = 100) {
 div1.addEventListener(('drag', throttle(function (e) {
     console.log(e.offsetX, e.offsetY)
 })))
+```
+
+
+
+## 实现观察者模式
+```js
+class PubSub {
+  constructor() {
+    this.handles = {};
+  }
+
+  // 订阅事件
+  on(eventType, handle) {
+    if (!this.handles.hasOwnProperty(eventType)) {
+      this.handles[eventType] = [];
+    }
+    if (typeof handle == 'function') {
+      this.handles[eventType].push(handle);
+    } else {
+      throw new Error('缺少回调函数');
+    }
+    return this;
+  }
+
+  // 发布事件
+  emit(eventType, ...args) {
+    if (this.handles.hasOwnProperty(eventType)) {
+      this.handles[eventType].forEach((item, key, arr) => {
+        item.apply(null, args);
+      })
+    } else {
+      throw new Error(`"${eventType}"事件未注册`);
+    }
+    return this;
+  }
+
+  // 删除事件
+  off(eventType, handle) {
+    if (!this.handles.hasOwnProperty(eventType)) {
+      throw new Error(`"${eventType}"事件未注册`);
+    } else if (typeof handle != 'function') {
+      throw new Error('缺少回调函数');
+    } else {
+      this.handles[eventType].forEach((item, key, arr) => {
+        if (item == handle) {
+          arr.splice(key, 1);
+        }
+      })
+    }
+    return this; // 实现链式操作
+  }
+}
+
+// 下面做一些骚操作
+let callback = function () {
+  console.log('you are so nice');
+}
+
+let pubsub = new PubSub();
+pubsub.on('completed', (...args) => {
+  console.log(args.join(' '));
+}).on('completed', callback);
+
+pubsub.emit('completed', 'what', 'a', 'fucking day');
+pubsub.off('completed', callback);
+pubsub.emit('completed', 'fucking', 'again');
 ```
