--- a/docs/views/fe/interview/新鲜面经和资源分享.md
+++ b/docs/views/fe/interview/新鲜面经和资源分享.md
@@ -8,8 +8,6 @@ categories:
   - 前端
 ---
 
-> 上一篇文章，[一年半前端人的求职路](https://juejin.cn/post/6940058373534515237) 因为被举报取消了推荐，再来一篇
-
 <!-- more -->
 
 
@@ -96,7 +94,7 @@ categories:
 ## 三、资源分享
 ### 1、博客
 - [阮一峰的个人网站](http://www.ruanyifeng.com/home.html)  持续更新，没事就去看看，阮大的风格就是`很容易看懂`
-- [字节飞书的学习计划 - 超清楚（必看）](https://bitable.feishu.cn/appNuDKPaGtimrdkB0JnXmpoktZ) 字节前端知识梳理，很清楚，`建议收藏`
+- [字节飞书的学习计划 - 超清楚（必看）](https://f07xvemc7p.feishu.cn/base/bascnwel4SwRLONo4s5PI9jn6Ch?table=tblrPP3K1niKblx0&view=vew9iquA45) 字节前端知识梳理，很清楚，`建议收藏`
 - [冴羽的博客](https://github.com/mqyqingfeng/Blog) 淘宝大神总结的`前端基础`
 - [Gridea](https://gridea.dev/) Gridea 是一个`静态博客`写作客户端，帮助你更容易地构建并管理博客或任何静态站点
 - [vuepress-theme-reco](https://vuepress-theme-reco.recoluan.com/) 一款简洁而优雅的 vuepress 博客 & 文档 主题。我的[个人博客](https://chessyu.github.io/)基于这个搭建的，有兴趣的可以了解下,博客也有`搭建教程`
@@ -160,12 +158,5 @@ categories:
 - [图解 HTTP 缓存](https://www.zoo.team/article/http-cache) `政采云`前端出品，讲的挺清楚的
 - [浏览器渲染机制](https://segmentfault.com/a/1190000014018604) 讲的`很全`
 
-### 岗位要求
-
-- [资深前端开发工程师/技术专家    点击查看详情](https://job.youzan.com/apply/youzan/3750#/job/3c99480b-566d-4b28-99a4-def7581805bd)
-
-
-
-![image.png](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/10e5aa40e9444a81a9a0cd1ecf03cc61~tplv-k3u1fbpfcp-watermark.image)
 
 
